--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section class="main-picture">
       <div class="main-picture__logo">
-        <img src="./image/logo.svg" alt="" />
+        <img src="./image/logo.svg" alt="logo" />
       </div>
       <div class="main-picture__title">Подводный отель</div>
       <div class="main-picture__text">
@@ -70,7 +70,7 @@
           <div class="articles__title">ОБЗОРЫ</div>
           <div class="article__items">
             <div class="article__item">
-              <img class="articles__image" src="/image/article1.jpg" alt="" />
+              <img class="articles__image" src="./image/article1.jpg" alt="first" />
               <div class="article__name">«Шальные годы» Монпарнаса</div>
               <div class="article__text">
                 В Музее изобразительных искусств имени Пушкина с 29 сентября по
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="article__item active__article">
-              <img class="articles__image" src="/image/article2.jpg" alt="" />
+              <img class="articles__image" src="./image/article2.jpg" alt="second" />
               <div class="article__name">Анатомия за 30 секунд</div>
               <div class="article__text">
                 Сейчас, когда мир открыт нараспашку для человека и его
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="article__item">
-              <img class="articles__image" src="/image/article3.jpg" alt="" />
+              <img class="articles__image" src="./image/article3.jpg" alt="third" />
               <div class="article__name">Сферические чудаки</div>
               <div class="article__text">
                 Корреспондентам «Культурного обозревателя» посчастливилось
